@@ -79,7 +79,6 @@ public class DesktopXmlSerializer implements XmlSerializer {
 				e.printStackTrace();
 			}
 		}
-		callPostDeserializeMethods(result, clazz);
 		return result;
 	}
 
@@ -112,7 +111,7 @@ public class DesktopXmlSerializer implements XmlSerializer {
 		}
 	}
 	
-	private <T> void callPostDeserializeMethods(T object, Class<T> clazz) throws SerializationException {
+	private <T> void callPostDeserializeMethods(T object, Class<?> clazz) throws SerializationException {
 		Class<?> currentClass = clazz;
 		while (currentClass != null && !currentClass.equals(Object.class)) {
 			for(Method method : ClassReflection.getDeclaredMethods(currentClass)) {
@@ -622,6 +621,7 @@ public class DesktopXmlSerializer implements XmlSerializer {
 					parserEventType = xmlReader.next();
 				}
 			}
+			callPostDeserializeMethods(result, clazz);
 			return result;
 		} catch (SerializationException e) {
 			throw e;
